# FindSystemFontsFilename

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: publish_to_pypi.yml  run_test.yml
find_system_fonts_filename/: __init__.py  android_fonts.py  exceptions.py  fonts_filename.py  linux_fonts.py  mac_fonts.py  system_fonts.py  windows_fonts.py
find_system_fonts_filename/android/: __init__.py  android.py  android_fonts.py
find_system_fonts_filename/linux/: __init__.py  fontconfig.py  linux_fonts.py
find_system_fonts_filename/mac/: __init__.py  core_foundation.py  core_text.py  mac_fonts.py  types.py  version_helpers.py
find_system_fonts_filename/unix/: __init__.py  fontconfig.py  unix_fonts.py
find_system_fonts_filename/windows/: __init__.py  advapi32.py  cygwin.py  directwrite.py  dwrite.py  gdi.py  gdi32.py  gdiplus.py  kernel32.py  msvcrt.py  user32.py  version_helpers.py  windows_fonts.py
tests/: test_fonts_filename.py
tests/files/: Test #1.py
